搜索配置修改

--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
         },
         search: {
           maxAge: 86400000,
-          paths: [],
+          paths: [
+            "/测试相关",
+            "/后端方向",
+            "/其他归类",
+            "/奇淫巧技",
+            "/前端方向",
+            "/日本語",
+            "/容器技术",
+            "/生活",
+            "/瞎看看",
+            "/GitCLI",
+            "/Minecraft",
+            "/",
+          ],
           noData: {
             "/": "什么玩意儿都没搜到...",
           },
@@ -48,7 +61,6 @@
           depth: 6,
           hideOtherSidebarContent: false, // whether or not to hide other sidebar content
           namespace: "website-1",
-          pathNamespaces: /^(\/(zh-cn|ru-ru))?(\/(v1|v2))?/,
         },
       };
     </script>
