--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>和风柒月の手紙</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description" />
     <meta
@@ -38,26 +38,14 @@
         },
         search: {
           maxAge: 86400000,
-          paths: [
-            "/测试相关",
-            "/后端方向",
-            "/其他归类",
-            "/奇淫巧技",
-            "/前端方向",
-            "/日本語",
-            "/容器技术",
-            "/生活",
-            "/瞎看看",
-            "/GitCLI",
-            "/Minecraft",
-            "/",
-          ],
+          paths: "auto",
           noData: {
             "/": "什么玩意儿都没搜到...",
           },
           placeholder: {
             "/": "搜索在这里！",
           },
+          namespace: "/studynotes",
           depth: 6,
           hideOtherSidebarContent: false, // whether or not to hide other sidebar content
           namespace: "website-1",
